[TASK] Provide PermissionAttributes from database
Add PermissionAttributes based on configuration in database
for dashboards and widgets.
Also the hasAccess check is not centraliced in AbstractController.
example configuration from database:

{
  "widgets": {
    "7318c2d76952cbe86802daf35c7600d373ce4d7e": {
      "identifier": "t3News",
      "config": [],
      "permissions": {
        "be_user:1": {
          "dashboard:view": "deny"
        },
        "be_group:1": {
          "dashboard:view": "permit"
        }
      }
    },
    "fe6d4d6514443d666041225b74957ef00c3cdcde": {
      "identifier": "documentation",
      "config": []
    },
    "fde8bc82d755731e9e287de8e14bd7e1578bbae2": {
      "identifier": "numberOfBackendUsers",
      "config": [],
      "permissions": {
        "be_user:1": {
          "dashboard:view": "deny"
        },
        "be_group:1": {
          "dashboard:view": "permit"
        }
      }
    },
    "62c5cd1d5fed56e18dbbb676ddf27ddd31672b44": {
      "identifier": "numberOfAdminBackendUsers",
      "config": []
    },
    "fa17c60b2868802494a893bf86e51e161c01c9d1": {
      "identifier": "lastLogins",
      "config": []
    },
    "d03a75802e48be46255d61b7e95d908ff434a182": {
      "identifier": "pagesWithoutDescription",
      "config": []
    },
    "50b2dbc8505b92fb9d6a6d24433c3dde19d17a4f": {
      "identifier": "sysLogErrors",
      "config": []
    }
  },
  "permissions": {
    "be_user:1": {
      "dashboard:view": "permit",
      "dashboard:add-widget": "deny",
      "dashboard:remove-widget": "deny",
      "dashboard:edit-settings": "permit",
      "dashboard:edit-permissions": "deny"
    },
    "be_group:1": {
      "dashboard:view": "permit",
      "dashboard:add-widget": "deny",
      "dashboard:remove-widget": "deny",
      "dashboard:edit-settings": "deny",
      "dashboard:edit-permissions": "deny"
    }
  }
}

--- a/Configuration/Backend/Permissions.yaml
+++ b/Configuration/Backend/Permissions.yaml
@@ -2,21 +2,24 @@ TYPO3:
   CMS:
     Permission:
       Actions:
-        - 
+        -
           identifier: 'dashboard:view'
-        - 
+        -
+          identifier: 'dashboard:add-dashboard'
+        -
           identifier: 'dashboard:add-widget'
-        - 
+        -
           identifier: 'dashboard:remove-widget'
-        - 
+        -
           identifier: 'dashboard:edit-settings'
-        - 
+        -
           identifier: 'dashboard:edit-permissions'
       Resources:
         -
           identifier: 'dashboard:dashboard'
           actions:
             - 'dashboard:view'
+            - 'dashboard:add-dashboard'
             - 'dashboard:add-widget'
             - 'dashboard:remove-widget'
             - 'dashboard:edit-settings'
