--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,10 @@
     "bin-dir": ".build/bin"
   },
   "require": {
+    "typo3/cms-backend": "^9.5 || 10.*@dev",
     "typo3/cms-core": "^9.5 || 10.*@dev",
+    "typo3/cms-extbase": "^9.5 || 10.*@dev",
+    "typo3/cms-fluid": "^9.5 || 10.*@dev",
     "typo3/cms-security": "dev-feature/backend-permissions",
     "psr/http-message": "^1.0",
     "symfony/finder": "^4.3",
