--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -4,11 +4,6 @@ services:
     autoconfigure: true
     public: false
 
-  cache.runtime:
-    class: TYPO3\CMS\Core\Cache\Frontend\FrontendInterface
-    factory: ['@TYPO3\CMS\Core\Cache\CacheManager', 'getCache']
-    arguments: ['runtime']
-
   FriendsOfTYPO3\Dashboard\:
     resource: '../Classes/*'
 
@@ -16,11 +11,11 @@ services:
     public: true
   FriendsOfTYPO3\Dashboard\Controller\WidgetAjaxController:
     public: true
-  FriendsOfTYPO3\Dashboard\Security\Permission\PermissionAttributeProvider:
+  FriendsOfTYPO3\Dashboard\Security\AccessControl\Permission\PermissionAttributeProvider:
     arguments:
-      $cache: '@cache.runtime'
+      - '@cache.runtime'
     tags:
       -
         name: event.listener
         identifier: 'dashboard-permission-provider'
-        event: TYPO3\CMS\Security\Event\AttributeRetrivalEvent
+        event: TYPO3\CMS\Security\AccessControl\Event\AttributeRetrivalEvent
